--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.1.1",
     "ngx-bootstrap": "^4.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
